# ChangeLog for dev-python/dulwich
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/dulwich/ChangeLog,v 1.18 2010/09/19 23:31:07 arfrever Exp $

  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -dulwich-0.6.0.ebuild:
  Delete.

  19 Sep 2010; Markos Chandras <hwoarang@gentoo.org> dulwich-0.6.1.ebuild:
  Stable on amd64 wrt bug #337134

  17 Sep 2010; Christian Faulhammer <fauli@gentoo.org> dulwich-0.6.1.ebuild:
  stable x86, bug 337134

*dulwich-0.6.1 (23 Jul 2010)

  23 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +dulwich-0.6.1.ebuild:
  Version bump.

  10 Jul 2010; Christian Faulhammer <fauli@gentoo.org> dulwich-0.6.0.ebuild:
  stable x86, bug 327149

  26 Jun 2010; Christoph Mende <angelos@gentoo.org> dulwich-0.6.0.ebuild:
  Stable on amd64 wrt bug #325421

  29 May 2010; Fabian Groffen <grobian@gentoo.org> dulwich-0.6.0.ebuild:
  Marked ~x86-solaris

*dulwich-0.6.0 (26 May 2010)

  26 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +dulwich-0.6.0.ebuild:
  Version bump.

  21 Apr 2010; Christian Faulhammer <fauli@gentoo.org> dulwich-0.5.0.ebuild:
  stable x86, bug 313155

  13 Apr 2010; Markos Chandras <hwoarang@gentoo.org> dulwich-0.5.0.ebuild:
  Stable on amd64 wrt bug #313155

  24 Mar 2010; Fabian Groffen <grobian@gentoo.org> dulwich-0.5.0.ebuild:
  Marked ~ppc-macos

  16 Mar 2010; Dirkjan Ochtman <djc@gentoo.org> dulwich-0.4.1.ebuild:
  amd64 stable, bug 303511

*dulwich-0.5.0 (05 Mar 2010)

  05 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +dulwich-0.5.0.ebuild:
  Version bump.

  06 Feb 2010; Christian Faulhammer <fauli@gentoo.org> dulwich-0.4.1.ebuild:
  stable x86, bug 303511

*dulwich-0.4.1 (04 Jan 2010)

  04 Jan 2010; Dirkjan Ochtman <djc@gentoo.org> +dulwich-0.4.1.ebuild:
  Bump to 0.4.1.

  01 Dec 2009; Markus Meier <maekke@gentoo.org> dulwich-0.4.0.ebuild: