@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/timelib
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/timelib/ChangeLog,v 1.2 2010/01/12 13:41:37 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/timelib/ChangeLog,v 1.3 2010/10/17 20:48:07 arfrever Exp $
+
+*timelib-0.2.2 (17 Oct 2010)
+
+  17 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -timelib-0.2.1.ebuild, +timelib-0.2.2.ebuild:
+  Version bump.
 
   12 Jan 2010; Christian Faulhammer <fauli@gentoo.org> timelib-0.2.1.ebuild:
   add ~x86, bug 297725
