@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/dulwich
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/dulwich/ChangeLog,v 1.18 2010/09/19 23:31:07 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/dulwich/ChangeLog,v 1.19 2010/10/17 20:44:29 arfrever Exp $
+
+*dulwich-0.6.2 (17 Oct 2010)
+
+  17 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +dulwich-0.6.2.ebuild:
+  Version bump.
 
   19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   -dulwich-0.6.0.ebuild:
